logs/tentakel.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tentakel'...
Compiling './lib/python3.5/site-packages/tentakel/config.py'...
***   File "./lib/python3.5/site-packages/tentakel/config.py", line 185
    except tpg.SyntacticError, excerr:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tentakel/plugins'...
Compiling './lib/python3.5/site-packages/tentakel/shell.py'...
***   File "./lib/python3.5/site-packages/tentakel/shell.py", line 59
    print "empty command"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tentakel-2.3.egg-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/tentakel'...
Listing './share/python-wheels'...
